--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <span class="tag">Seaborn</span>
                         <span class="tag">Linear Regression</span>
                         <span class="tag">Logistic Regression</span>
-                        <span class="tag">Gradient Descent/span>
+                        <span class="tag">Gradient Descent</span>
                     </div>
                 </div>
                 <div class="skill-category">
