--- a/course-history.html
+++ b/course-history.html
@@ -19,6 +19,7 @@
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
+             <button id="theme-toggle" class="theme-toggle" aria-label="Toggle color theme">☀ Light</button>
         </div>
     </nav>
 
