--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <script>
+        (() => {
+            const saved = localStorage.getItem('theme');
+            const isLight = saved === 'light';
+            document.body.classList.toggle('theme-light', isLight);
+        })();
+    </script>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
