Update course: replace HUMA1157 with HUMA1102

--- a/course-history.html
+++ b/course-history.html
@@ -66,7 +66,7 @@
             <span class="course-name">FINA2303 - Financial Management (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">HUMA1157 - Introduction to Acting and Public Speaking (3)</span>
+            <span class="course-name">HUMA1102 - Introduction to Classical Music (3)</span>
         </div>
         <div class="course">
             <span class="course-name">ISOM2600 - Introduction to Business Analytics (1)</span>
